--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 
         <div id="video-controls" class="video-controls" style="display:none;">
             <div class="inner-video-controls">
-                <i id="backward-button" class="fa fa-backward" aria-hidden="true"></i>
-                <i id="play-button" class="fa fa-play fa-3x" aria-hidden="true" style="display:none;"></i>
-                <i id="pause-button" class="fa fa-pause fa-3x" aria-hidden="true"></i>
-                <i id="stop-button" class="fa fa-stop" aria-hidden="true"></i>
-                <i id="forward-button" class="fa fa-forward" aria-hidden="true"></i>
+                <button id="play-button" style="display:none;">play</button>
+                <button id="pause-button">pause</button>
+                <button id="stop-button" style="display:none;">stop</button>
             </div>
         </div>
 
